[project]
name = "hackernews-upvote-predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.9.3"
dependencies = [
    "datasets>=3.6.0",
    "matplotlib==3.9.0",
    "numpy==1.23",
    "pandas>=2.3.0",
    "psycopg2-binary>=2.9.10",
    "pyarrow>=20.0.0",
    "python-dotenv>=1.1.0",
    "torch==2.2.0",
    "torchmetrics>=1.7.2",
    "wandb>=0.20.1",
]
